Added styles.css and script.js

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
     <link
-      rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
+    rel="stylesheet"
+    href="path/to/font-awesome/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="./src/styles.css">
+    <script src="./src/script.js"></script>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="container">
