--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <!--Footer-->
       <footer>
         <p class="footer">
-          This project was coded by <a href="">SheCodes</a> and is
-          <a href="">open-sourced on GitHub</a> and
-          <a href="">hosted on Netlify</a>
+          This project was coded by Naomi Clyde and is
+          <a href="https://github.com/naomi-clyde51">open-sourced on GitHub</a> and
+          <a href="https://magnificent-parfait-5388c1.netlify.app/">hosted on Netlify</a>
         </p>
       </footer>
     </div>
