Added the forecast HTML from JS

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <br />
 
       <!--Forecast for the next 5 days-->
-      <div class="forecast">
+      <div class="forecast-style" id="forecast">
         <ul>
           <li>
             Tue
