Added displayForecast and getForecast

--- a/index.html
+++ b/index.html
@@ -56,54 +56,20 @@
 
         <!--Temperature (degrees)-->
         <div class="current-temperature">
-          <img class="icon" id="current-icon" src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" alt="weather icon">
-          <h1 id="current-temp__heading">
-          </h1>
+          <img
+            class="icon"
+            id="current-icon"
+            src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+            alt="weather icon"
+          />
+          <h1 id="current-temp__heading"></h1>
         </div>
       </div>
 
       <br />
 
       <!--Forecast for the next 5 days-->
-      <div class="forecast-style" id="forecast">
-        <ul>
-          <li>
-            Tue
-            <br />
-            🌞
-            <strong>14°C</strong> -18°C
-          </li>
-          <br />
-          <li>
-            Wed
-            <br />
-            🌞
-            <strong>14°C</strong> -18°C
-          </li>
-          <br />
-          <li>
-            Thu
-            <br />
-            🌞
-            <strong>14°C</strong> -18°C
-          </li>
-          <br />
-          <li>
-            Fri
-            <br />
-            🌞
-            <strong>14°C</strong> -18°C
-          </li>
-          <br />
-          <li>
-            Sat
-            <br />
-            🌞
-            <strong>14°C</strong> -18°C
-          </li>
-          <br />
-        </ul>
-      </div>
+      <div class="forecast-style" id="forecast"></div>
 
       <br />
       <hr />
