--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
 
         <!--Temperature (degrees)-->
         <div class="current-temperature">
-          <img
-            class="icon"
-            id="current-icon"
-            src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
-            alt="weather icon"
-          />
+          <div class="current-icon">
+            <img
+              class="icon"
+              id="current-icon"
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+              alt="weather icon"
+            />
+          </div>
           <h1 id="current-temp__heading"></h1>
         </div>
       </div>
