Hid emojiElement variable

--- a/index.html
+++ b/index.html
@@ -56,13 +56,8 @@
 
         <!--Temperature (degrees)-->
         <div class="current-temperature">
-          <div class="current-icon">
-            <img
-              class="icon"
-              id="current-icon"
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
-              alt="weather icon"
-            />
+          <div id="current-icon">
+            <img class="icon" id="current-icon" src="" alt="" />
           </div>
           <h1 id="current-temp__heading"></h1>
         </div>
